crates/analyzer/tests/snapshots/errors__call_keccak_with_wrong_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `bool` can not be used as an argument to `keccak256`
  ┌─ [snippet]:3:12
  │
3 │   keccak256(true)
  │            ^^^^^^ wrong type
  │
  = Note: `keccak256` expects a byte array argument


